--- a/style.css
+++ b/style.css
@@ -372,8 +372,9 @@ a {
 }
 
 .logo-img {
-    height: 32px;
+    height: 20px;
     width: auto;
+    object-fit: contain;
 }
 
 .logo-text span {
